# templates

./: README.md
go/cli-daemon-template/: .gitignore  Makefile  README.md  config.example.yml  go.mod  install.sh  main.go
go/cli-daemon-template/service/: service.go  service_test.go
go/web-service-template/: Dockerfile  go.mod  main.go
python/daemon-template/: .gitignore  Makefile  main.py  requirements.txt  setup.cfg
python/daemon-template/src/: __init__.py  utils.py
python/daemon-template/tests/: __init__.py  test_main.py
python/full-stack-monorepo/: .gitignore  Makefile  README.md  alembic.ini  env.example  pyproject.toml
python/full-stack-monorepo/alembic/: env.py
python/full-stack-monorepo/alembic/versions/: 001_seed_initial_data.py
python/full-stack-monorepo/backend/: __init__.py  main.py
python/full-stack-monorepo/backend/routes/: __init__.py  core.py  users.py
python/full-stack-monorepo/common/: __init__.py
python/full-stack-monorepo/common/database/: __init__.py  connection.py  session.py
python/full-stack-monorepo/common/models/: __init__.py  base.py  user.py
python/full-stack-monorepo/core/: __init__.py  engine.py  processor.py
python/full-stack-monorepo/frontend/: README.md  index.html  package.json
python/full-stack-monorepo/frontend/src/: App.tsx  index.css  main.tsx
python/full-stack-monorepo/frontend/src/common/: index.ts
python/full-stack-monorepo/frontend/src/common/components/: Navigation.tsx  ThemeToggle.tsx  index.ts
python/full-stack-monorepo/frontend/src/common/components/ui/: Button.tsx  Card.tsx  Input.tsx  Loading.tsx  index.ts
python/full-stack-monorepo/frontend/src/common/contexts/: ThemeContext.tsx  index.ts
python/full-stack-monorepo/frontend/src/common/services/: api.ts  index.ts
python/full-stack-monorepo/frontend/src/mocks/: browser.ts  handlers.ts
python/full-stack-monorepo/frontend/src/pages/: Home.tsx  Users.tsx
python/full-stack-monorepo/scripts/: example_script.py
python/full-stack-monorepo/tests/: test_api.py  test_core.py
python/ml-template/: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
python/ml-template/data/interim/: .gitkeep
python/ml-template/data/processed/: .gitkeep
python/ml-template/data/raw/: .gitkeep
python/ml-template/models/: .gitkeep
python/ml-template/src/: __init__.py  cli.py  config.py
python/ml-template/src/data/: __init__.py  loader.py
python/ml-template/src/evaluation/: __init__.py  evaluator.py
python/ml-template/src/models/: __init__.py  base.py  ensemble.py  linear.py  registry.py
python/ml-template/src/serving/: __init__.py  api.py
python/ml-template/src/training/: __init__.py  trainer.py
python/ml-template/tests/: __init__.py  test_models.py
python/web-service-template/: README.md  main.py  pyproject.toml  requirements.txt
python/web-service-template/tests/: test_utils.py
rust/daemon-template/: Cargo.toml  Makefile  README.md
rust/daemon-template/src/: main.rs
rust/web-service-template/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
rust/web-service-template/src/: main.rs
